Bug 140577: Radio buttons and check boxes aligned to the left when UI aligned to the right, r+sr=roc.